--- a/image colorization/requirements.txt
+++ b/image colorization/requirements.txt
@@ -1,8 +1,10 @@
+setuptools>=41.0.0
 click==7.1.2
 cycler==0.10.0
 decorator==4.4.2
 Flask==1.1.2
 future==0.18.2
+gunicorn==20.0.4
 imageio==2.9.0
 itsdangerous==1.1.0
 Jinja2==2.11.2
@@ -18,5 +20,9 @@ PyWavelets==1.1.1
 scikit-image==0.15.0
 scipy==1.5.2
 six==1.15.0
+--find-links https://download.pytorch.org/whl/torch_stable.html
 torch==1.5.1+cpu
+torchvision==0.6.0+cpu
 Werkzeug==1.0.1
+--find-links https://dl.fbaipublicfiles.com/detectron2/wheels/cpu/torch1.5/index.html
+detectron2==0.2
